Bug 460514 - Inconsistent system tray icon for screen share indicator
Summary: Inconsistent system tray icon for screen share indicator
Status: RESOLVED FIXED
Alias: None
Product: xdg-desktop-portal-kde
Classification: Plasma
Component: general (other bugs)
Version First Reported In: 5.26.0
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-10-16 06:23 UTC by Bacteria
Modified: 2022-10-18 13:24 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.27
Sentry Crash Report:


Attachments
Colored icon for screen share indicator while others use mostly monochromatic colors (22.52 KB, image/png)
2022-10-16 06:23 UTC, Bacteria
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Bacteria 2022-10-16 06:23:39 UTC
Created attachment 152875 [details]
Colored icon for screen share indicator while others use mostly monochromatic colors

SUMMARY
When sharing screen, the system tray uses an icon which is inconsistent with other icons like microphone, speaker, clipboard, notification icons, etc. 

SOFTWARE/OS VERSIONS
Operating System: Arch Linux
KDE Plasma Version: 5.26.0
KDE Frameworks Version: 5.99.0
Qt Version: 5.15.6
Kernel Version: 6.0.1-arch2-1 (64-bit)
Graphics Platform: Wayland
Comment 1 Nate Graham 2022-10-17 18:29:57 UTC
Git commit 8f2a8327f1076ef5976303e9bd07c23261aa21cf by Nate Graham.
Committed on 17/10/2022 at 18:27.
Pushed by ngraham into branch 'master'.

screenshare SNI: use monochrome-compatible icon

`video-display` is always colorful; `monitor` is the same icon but
monochrome at 16px and 22px sizes, which is what we want here.
FIXED-IN: 5.26.1

M  +3    -3    src/waylandintegration.cpp

https://invent.kde.org/plasma/xdg-desktop-portal-kde/commit/8f2a8327f1076ef5976303e9bd07c23261aa21cf
Comment 2 Nate Graham 2022-10-17 18:30:53 UTC
Git commit 047f83cfb4ae62270e1b95036132ce8bb9df335a by Nate Graham.
Committed on 17/10/2022 at 18:30.
Pushed by ngraham into branch 'Plasma/5.26'.

screenshare SNI: use monochrome-compatible icon

`video-display` is always colorful; `monitor` is the same icon but
monochrome at 16px and 22px sizes, which is what we want here.
FIXED-IN: 5.26.1
(cherry picked from commit 8f2a8327f1076ef5976303e9bd07c23261aa21cf)

M  +3    -3    src/waylandintegration.cpp

https://invent.kde.org/plasma/xdg-desktop-portal-kde/commit/047f83cfb4ae62270e1b95036132ce8bb9df335a
Comment 3 Nate Graham 2022-10-18 13:24:46 UTC
Git commit fbafe9224392d9124b48d8c6a35a4bd8b074797d by Nate Graham.
Committed on 17/10/2022 at 21:11.
Pushed by ngraham into branch 'master'.

Use more semantically accurate icon for screen recording SNI

Before, the icon was communicating *what* was being recorded (a screen).
This new icon communicates that recording is happening in the first
place.

M  +3    -3    src/waylandintegration.cpp

https://invent.kde.org/plasma/xdg-desktop-portal-kde/commit/fbafe9224392d9124b48d8c6a35a4bd8b074797d