Use more semantically accurate icon for screen recording SNI

Before, the icon was communicating *what* was being recorded (a screen).
This new icon communicates that recording is happening in the first
place.

BUG: 460514